# openbsdisks2

./: .clang-format  CMakeLists.txt  LICENSE.TXT  README.md  adaptors.cpp  adaptors.h  bsdisks-newsyslog.conf.sample  bsdisks-syslog.conf.sample  bsdisks.8  bsdisks.conf.5  bsdisks.conf.sample  bsdisks.h  bsdisks_extensions.xml  camcontrolprober.h  filesystemprober.cpp  geomprober.cpp  geomprober.h  main.cpp  manageradaptor.h  objectmanager.cpp  objectmanager.h  org.freedesktop.UDisks2.service.in  org.freedesktop.UDisks2.xml  org.freedesktop.udisks2.policy  zfsprober.cpp  zfsprober.h
.github/: FUNDING.yml
.github/workflows/: cmake.yml
src/: adaptors.cpp  adaptors.h  block.cpp  block.h  blockfilesystem.cpp  blockfilesystem.h  blockpartition.cpp  blockpartition.h  blockparttable.cpp  blockparttable.h  bsdisks.h  camcontrol.c  camcontrolprober.cpp  camcontrolprober.h  cd_handler.cpp  cd_handler.h  cdhandler.cpp  cdhandler.h  devdthread.cpp  devdthread.h  disk_label.cpp  disk_label.h  disk_thread.cpp  disk_thread.h  drive.cpp  drive.h  filesystemprober.cpp  filesystemprober.h  geomprober.cpp  geomprober.h  main.cpp  manageradaptor.cpp  manageradaptor.h  objectmanager.cpp  objectmanager.h  zfsprober.cpp  zfsprober.h
